tests/invalid/for_range_no_args/main.py
def run_case() -> None:
    for i in range():
        print(i)

if __name__ == "__main__":
    run_case()
